# special

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PATTERNS.md  README.md  build.rs  dist-workspace.toml  mise.toml  special.toml
.codex-evals/: rust-release-review-2026-04-13.md
.github/workflows/: release.yml
_project/: ARCHITECTURE.md  BACKLOG.md  PRODUCT.md
_project/inbox/: 2026-04-13-spec-deprecation-lifecycle.md  (+1 more)
lean/: ScopedHealth.lean
scripts/: codex-native-review.sh  release-assets.json  release_review_context.py  release_review_contract.py  release_review_invoke.py  release_review_merge.py  release_review_pipeline.py  release_review_planning.py  release_tooling.py  review-rust-release-style.py  rust-release-review.schema.json  tag-release.py  update-homebrew-formula.py  verify-github-release-published.sh  verify-homebrew-formula.sh  verify-lean-traceability-kernel.py  verify-rust-clippy.sh
specs/: root.md
src/: annotation_syntax.rs  cache.rs  cli.rs  config.rs  discovery.rs  extractor.rs  id_path.rs  index.rs  lib.rs  main.rs  model.rs  modules.rs  overview.rs  parser.rs  patterns.rs  planned_syntax.rs  render.rs  skills.rs  source_paths.rs  syntax.rs  text_lines.rs  tree_sitter_utils.rs
tests/: cli.rs  cli_config_lint.rs  cli_discovery.rs  cli_init.rs  cli_modules.rs  cli_overview.rs  cli_patterns.rs  cli_repo.rs  cli_skills.rs  cli_spec.rs  distribution.rs  quality.rs  quality_clippy.rs  quality_release_review.rs  quality_tag_release.rs  scoped_health_benchmark.rs  scoped_health_proof_boundary.rs
(+252 files in other folders)
