[package]
name = "special-cli"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/LabLeaks/special"

[lib]
name = "special"

[[bin]]
name = "special"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "html"] }
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
